# naadi

./: .gitignore  README.md
docs/: ARCHITECTURE.md  DEMO-SCRIPT.md  PITCH.md  SCORING.md
docs/assets/: fill_template.py  pitch.html
engine/: README.md  pyproject.toml
engine/artifacts/: validation.json
engine/scripts/: build_demo.py
engine/src/naadi/: __init__.py  api.py  explain.py  features.py  generate.py  limits.py  munshi.py  personas.py  scoring.py
web/: README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/app/compare/: layout.tsx  page.tsx
web/src/app/m/[id]/: page.tsx
web/src/components/: AlertsStrip.tsx  Chips.tsx  CommandK.tsx  Header.tsx  MemoPanel.tsx  OfficerDecision.tsx  PrintButton.tsx  PulseLine.tsx  Radar6.tsx  ReasonLedger.tsx  RiskScatter.tsx  ScoreDial.tsx  ScoreHistory.tsx  SensitivityLab.tsx  Spark.tsx  StressLab.tsx  TraceReplay.tsx  Waterfall.tsx  WhatIf.tsx
web/src/data/: demo.json
web/src/lib/: data.ts  format.ts  types.ts
