[project]
name = "naadi-engine"
version = "0.1.0"
description = "NAADI scoring engine — synthetic data, features, models, explainability, Munshi copilot"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "polars>=1.9",
    "duckdb>=1.1",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "anthropic>=0.40",
    "joblib>=1.4",
    "pyarrow>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/naadi"]
